--- a/cobjtracking.ui
+++ b/cobjtracking.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>311</width>
-    <height>349</height>
+    <height>394</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,13 +26,6 @@
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Step</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
-         <widget class="QDateTimeEdit" name="dateTimeEdit_2">
-          <property name="displayFormat">
-           <string>d.M.yyyy H:mm</string>
           </property>
          </widget>
         </item>
@@ -70,23 +63,13 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
-         <widget class="QSpinBox" name="spinBox">
-          <property name="minimum">
-           <number>1</number>
-          </property>
-          <property name="maximum">
-           <number>1000</number>
-          </property>
-         </widget>
-        </item>
         <item row="3" column="1" colspan="2">
          <widget class="QComboBox" name="comboBox"/>
         </item>
-        <item row="0" column="2">
-         <widget class="QLabel" name="label_2">
+        <item row="0" column="0" colspan="2">
+         <widget class="QLabel" name="label">
           <property name="text">
-           <string>End</string>
+           <string>Begin</string>
           </property>
          </widget>
         </item>
@@ -103,10 +86,27 @@
           </property>
          </spacer>
         </item>
-        <item row="0" column="0" colspan="2">
-         <widget class="QLabel" name="label">
+        <item row="1" column="2">
+         <widget class="QDateTimeEdit" name="dateTimeEdit_2">
+          <property name="displayFormat">
+           <string>d.M.yyyy H:mm</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <widget class="QSpinBox" name="spinBox">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>1000</number>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>Begin</string>
+           <string>End</string>
           </property>
          </widget>
         </item>
@@ -122,6 +122,23 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item row="6" column="0">
+         <widget class="QSpinBox" name="spinBox_4">
+          <property name="minimum">
+           <number>1</number>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Draw marks every N steps</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
