--- a/cpolarishourangle.ui
+++ b/cpolarishourangle.ui
@@ -118,6 +118,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QPushButton" name="pushButton_3">
+         <property name="text">
+          <string>Map time</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="pushButton">
          <property name="text">
           <string>Current time</string>
