--- a/csetting.ui
+++ b/csetting.ui
@@ -23,7 +23,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>4</number>
      </property>
      <property name="documentMode">
       <bool>false</bool>
@@ -174,7 +174,7 @@
             <enum>QFrame::StyledPanel</enum>
            </property>
            <property name="currentIndex">
-            <number>12</number>
+            <number>13</number>
            </property>
            <widget class="QWidget" name="stackedWidget_2Page1">
             <layout class="QVBoxLayout" name="verticalLayout_18">
@@ -4854,6 +4854,13 @@
               </property>
               <layout class="QVBoxLayout" name="verticalLayout_114">
                <item>
+                <widget class="QCheckBox" name="checkBox_12">
+                 <property name="text">
+                  <string>Bold values</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_27">
                  <item>
                   <layout class="QVBoxLayout" name="verticalLayout_86">
@@ -4981,78 +4988,6 @@
       <layout class="QVBoxLayout" name="verticalLayout_104">
        <item>
         <layout class="QGridLayout" name="gridLayout_12">
-         <item row="1" column="0">
-          <widget class="QGroupBox" name="groupBox_31">
-           <property name="title">
-            <string>Planet ephemeris</string>
-           </property>
-           <layout class="QVBoxLayout" name="verticalLayout_105">
-            <item>
-             <widget class="QRadioButton" name="rb_plan404">
-              <property name="text">
-               <string>PLAN404 - S. L. Moshier</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="rb_vsop87">
-              <property name="text">
-               <string>VSOP87 - Bureau des Longitudes</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QGroupBox" name="groupBox_32">
-           <property name="title">
-            <string>Moon ephemeris</string>
-           </property>
-           <layout class="QVBoxLayout" name="verticalLayout_103">
-            <item>
-             <widget class="QRadioButton" name="rb_mplan404">
-              <property name="text">
-               <string>PLAN404 - S .L. Moshier</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QRadioButton" name="rb_elp2000">
-              <property name="text">
-               <string>ELP2000 - Bureau des Longitudes</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </item>
-         <item row="3" column="0">
-          <spacer name="verticalSpacer_19">
-           <property name="orientation">
-            <enum>Qt::Vertical</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>20</width>
-             <height>40</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="1" column="2">
-          <spacer name="horizontalSpacer_22">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
          <item row="0" column="0">
           <widget class="QGroupBox" name="groupBox_33">
            <property name="title">
@@ -5069,7 +5004,7 @@
             <item>
              <widget class="QLabel" name="label_119">
               <property name="text">
-               <string>The order of use ephemeris (Files must be stored in SkytechX\data\jplde)</string>
+               <string>The order of use ephemeris (Files must be stored in </string>
               </property>
              </widget>
             </item>
@@ -5124,6 +5059,82 @@ then PLAN404 or VSOP87 is used</string>
             </item>
            </layout>
           </widget>
+         </item>
+         <item row="2" column="2">
+          <spacer name="horizontalSpacer_22">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="4" column="0">
+          <spacer name="verticalSpacer_19">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item row="1" column="0">
+          <layout class="QHBoxLayout" name="horizontalLayout_37">
+           <item>
+            <widget class="QGroupBox" name="groupBox_31">
+             <property name="title">
+              <string>Planet ephemeris</string>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_105">
+              <item>
+               <widget class="QRadioButton" name="rb_plan404">
+                <property name="text">
+                 <string>PLAN404 - S. L. Moshier</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="rb_vsop87">
+                <property name="text">
+                 <string>VSOP87 - Bureau des Longitudes</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item>
+            <widget class="QGroupBox" name="groupBox_32">
+             <property name="title">
+              <string>Moon ephemeris</string>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_103">
+              <item>
+               <widget class="QRadioButton" name="rb_mplan404">
+                <property name="text">
+                 <string>PLAN404 - S .L. Moshier</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QRadioButton" name="rb_elp2000">
+                <property name="text">
+                 <string>ELP2000 - Bureau des Longitudes</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+          </layout>
          </item>
         </layout>
        </item>
