GCVS epoch as JD

--- a/variablestarsdialog.ui
+++ b/variablestarsdialog.ui
@@ -139,20 +139,11 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_8">
        <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
+        <widget class="QCheckBox" name="cb_jd">
+         <property name="text">
+          <string>Date as JD</string>
          </property>
-         <property name="sizeType">
-          <enum>QSizePolicy::Ignored</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_4">
