Fixed lunar topo. libration, new lunar features

--- a/cdownloadmpc.ui
+++ b/cdownloadmpc.ui
@@ -138,6 +138,7 @@
  </widget>
  <tabstops>
   <tabstop>spinBox</tabstop>
+  <tabstop>lineEdit</tabstop>
   <tabstop>lineEdit_2</tabstop>
   <tabstop>comboBox</tabstop>
   <tabstop>pushButton_2</tabstop>
