--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -865,7 +865,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>4</number>
+        <number>6</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
@@ -3175,7 +3175,7 @@ background-color: rgb(0, 0, 0);</string>
           <x>0</x>
           <y>0</y>
           <width>279</width>
-          <height>360</height>
+          <height>468</height>
          </rect>
         </property>
         <attribute name="label">
@@ -3232,6 +3232,17 @@ background-color: rgb(0, 0, 0);</string>
             <widget class="QCheckBox" name="checkBox_lfDiam">
              <property name="text">
               <string>Show feature diameter</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_21">
+           <item>
+            <widget class="QCheckBox" name="cb_lf_labels">
+             <property name="text">
+              <string>Show labels</string>
              </property>
             </widget>
            </item>
@@ -3371,6 +3382,34 @@ background-color: rgb(0, 0, 0);</string>
             </widget>
            </item>
           </layout>
+         </item>
+         <item>
+          <widget class="Line" name="line_23">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_19">
+           <item>
+            <widget class="QLineEdit" name="le_lunar_pos_lon">
+             <property name="readOnly">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="le_lunar_pos_lat"/>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <widget class="QTextEdit" name="te_lunar_text">
+           <property name="readOnly">
+            <bool>true</bool>
+           </property>
+          </widget>
          </item>
         </layout>
        </widget>
