--- a/resource.qrc
+++ b/resource.qrc
@@ -292,5 +292,6 @@
         <file>res/hammer_mask.png</file>
         <file>res/vo_cat.png</file>
         <file>res/night_mode.png</file>
+        <file>res/red/nova.png</file>
     </qresource>
 </RCC>
