--- a/csetting.ui
+++ b/csetting.ui
@@ -23,7 +23,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>5</number>
+      <number>1</number>
      </property>
      <property name="documentMode">
       <bool>false</bool>
@@ -174,7 +174,7 @@
             <enum>QFrame::StyledPanel</enum>
            </property>
            <property name="currentIndex">
-            <number>4</number>
+            <number>10</number>
            </property>
            <widget class="QWidget" name="stackedWidget_2Page1">
             <layout class="QVBoxLayout" name="verticalLayout_18">
@@ -2329,7 +2329,7 @@
              <item>
               <widget class="QTabWidget" name="tabWidget_3">
                <property name="currentIndex">
-                <number>0</number>
+                <number>1</number>
                </property>
                <widget class="QWidget" name="tab_12">
                 <attribute name="title">
@@ -2716,42 +2716,42 @@
                 <layout class="QVBoxLayout" name="verticalLayout_43">
                  <item>
                   <layout class="QFormLayout" name="formLayout_10">
-                   <item row="1" column="0">
+                   <item row="3" column="0">
                     <widget class="QLabel" name="label_53">
                      <property name="text">
                       <string>Color</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="2" column="0">
+                   <item row="4" column="0">
                     <widget class="CPushColorButton" name="pushButton_41">
                      <property name="text">
                       <string>PushButton</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="3" column="0">
+                   <item row="5" column="0">
                     <widget class="QLabel" name="label_55">
                      <property name="text">
                       <string>Label font &amp; color</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="4" column="0">
+                   <item row="6" column="0">
                     <widget class="CFontColorButton" name="pushButton_42">
                      <property name="text">
                       <string>PushButton</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="5" column="0">
+                   <item row="7" column="0">
                     <widget class="QLabel" name="label_54">
                      <property name="text">
                       <string>Phase opacity (alpha)</string>
                      </property>
                     </widget>
                    </item>
-                   <item row="6" column="0">
+                   <item row="8" column="0">
                     <widget class="QSlider" name="horizontalSlider_15">
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -2780,6 +2780,23 @@
                     <widget class="QCheckBox" name="checkBox_17">
                      <property name="text">
                       <string>Show earth shadow</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="1" column="0">
+                    <widget class="QLabel" name="label_136">
+                     <property name="text">
+                      <string>Hide the shadow when the Moon distance is greater than</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="2" column="0">
+                    <widget class="QSpinBox" name="spinBox_10">
+                     <property name="suffix">
+                      <string>°</string>
+                     </property>
+                     <property name="maximum">
+                      <number>180</number>
                      </property>
                     </widget>
                    </item>
