--- a/twilightdialog.ui
+++ b/twilightdialog.ui
@@ -271,6 +271,22 @@
           </widget>
          </item>
          <item>
+          <widget class="QLabel" name="label_rise_azm">
+           <property name="font">
+            <font>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>TextLabel</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
           <spacer name="verticalSpacer_4">
            <property name="orientation">
             <enum>Qt::Vertical</enum>
@@ -402,6 +418,22 @@
          </item>
          <item>
           <widget class="QLabel" name="label_t5">
+           <property name="font">
+            <font>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>TextLabel</string>
+           </property>
+           <property name="alignment">
+            <set>Qt::AlignCenter</set>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_set_azm">
            <property name="font">
             <font>
              <weight>75</weight>
