--- a/ceventsearch.ui
+++ b/ceventsearch.ui
@@ -226,16 +226,6 @@
                <string>Settings</string>
               </property>
               <layout class="QGridLayout" name="gridLayout_2">
-               <item row="4" column="0">
-                <widget class="QSpinBox" name="spinBox">
-                 <property name="minimum">
-                  <number>1</number>
-                 </property>
-                 <property name="maximum">
-                  <number>25</number>
-                 </property>
-                </widget>
-               </item>
                <item row="1" column="0">
                 <widget class="QCheckBox" name="checkBox_2">
                  <property name="text">
@@ -261,6 +251,16 @@
                 <widget class="QCheckBox" name="checkBox">
                  <property name="text">
                   <string>High precission</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="4" column="0">
+                <widget class="QDoubleSpinBox" name="spinBox">
+                 <property name="minimum">
+                  <double>0.000000000000000</double>
+                 </property>
+                 <property name="maximum">
+                  <double>45.000000000000000</double>
                  </property>
                 </widget>
                </item>
